@@ -8,7 +8,9 @@ import org.globsframework.core.metamodel.fields.StringField;
 import org.globsframework.core.metamodel.impl.DefaultGlobTypeBuilder;
 import org.globsframework.core.model.MutableGlob;
 
+import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class BooleanArrayFieldType {
     public static final GlobType TYPE;
@@ -22,7 +24,7 @@ public class BooleanArrayFieldType {
         GlobTypeBuilder typeBuilder = new DefaultGlobTypeBuilder("BooleanArray");
         TYPE = typeBuilder.unCompleteType();
         name = typeBuilder.declareStringField("name");
-        annotations = typeBuilder.declareGlobUnionArrayField("annotations", List.of());
+        annotations = typeBuilder.declareGlobUnionArrayField("annotations", Collections.emptyList());
         typeBuilder.complete();
 //        GlobTypeLoaderFactory.create(BooleanArrayFieldType.class).load();
     }
