@@ -10,6 +10,7 @@ import org.globsframework.core.metamodel.fields.StringField;
 import org.globsframework.core.metamodel.impl.DefaultGlobTypeBuilder;
 import org.globsframework.core.model.MutableGlob;
 
+import java.util.Collections;
 import java.util.List;
 
 public class GlobFieldType {
@@ -28,7 +29,7 @@ public class GlobFieldType {
         TYPE = typeBuilder.unCompleteType();
         name = typeBuilder.declareStringField(ConstantsName.NAME);
         targetType = typeBuilder.declareStringField(ConstantsName.TARGET_TYPE, IsTarget.INSTANCE);
-        annotations = typeBuilder.declareGlobUnionArrayField(ConstantsName.ANNOTATIONS, List.of());
+        annotations = typeBuilder.declareGlobUnionArrayField(ConstantsName.ANNOTATIONS, Collections.emptyList());
         typeBuilder.complete();
 
 //        GlobTypeLoaderFactory.create(GlobFieldType.class).load();
